高清无码2.0版

--- a/president/app/views/admin/president_edit.html.erb
+++ b/president/app/views/admin/president_edit.html.erb
@@ -7,7 +7,8 @@
 	
   <p>
     <%= f.label :party %><br>
-    <%= f.text_field :party %>
+    <%= f.select(:party, [["Republican", "Republican"], ["Democratic", "Democratic"]] ) %>
+  </p>
   </p>
  
   <p>
