--- a/president/app/views/admin/home.html.erb
+++ b/president/app/views/admin/home.html.erb
@@ -12,50 +12,37 @@
 		<h2>Admin Home</h2>
 	</div>
 
-
 	<div class="row">
-  		<div class="col-md-6">
-    		<div class="thumbnail">
-      			<img src="party.jpg">
-      			<div class="caption">
-        		<h3>President</h3>
-        		
-        		<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-      		</div>
-      		
-    	</div>
-    	
-  		<div class="col-md-6">
-    		<div class="thumbnail">
-      			<img src="video.jpg">
-      			<div class="caption">
-        		<h3>Video</h3>
-        		
-        		<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-      		</div>
-    	</div>    	
-    	
-    	
-  	</div>
-</div>
+    	<div class="col-md-6">
+        	<div class="thumbnail">
+        		<!--
+				<%= link_to image_tag("party.jpg", alt: "Presidents") %>
+				-->
+				<h3 class="page-header">Presidents</h3>
+				
+				<p class="btn"><%=link_to 'Add', admin_president_new_path%></p>
+				<p class="btn"><%= link_to 'List', admin_president_list_path%></p>
+  	
+            </div>    
+        </div>
+        <div class="col-md-6">
+        	<div class="thumbnail">
+            	<h3 class="page-header">Videos</h3>
+				
+				<p class="btn "><%= link_to 'Add', admin_video_new_path%></p>
+				<p class="btn"><%= link_to 'List', admin_video_list_path%></p>
 
+            </div>
+        </div>
+        <!--
+        <div class="col-md-4">
+            <div class="thumbnail">
+            	<img src="http://goo.gl/0Kd7UO">
+            </div>
+        </div>
+        -->
+    </div>
 
-
-
-
-
-
-
-<!--
-	<h3>President</h3>
-	<%= link_to 'Add', admin_president_new_path%>
-	<%= link_to 'List', admin_president_list_path%>
-
-
-	<h3>Video</h3>
-	<%= link_to 'Add', admin_video_new_path%>
-	<%= link_to 'List', admin_video_list_path%>
--->
 
 </div>
 
