--- a/president/app/views/video/video_view.html.erb
+++ b/president/app/views/video/video_view.html.erb
@@ -28,7 +28,8 @@
 	  	<br>
 	  	<br>
 	 	<strong>Debate President:</strong>
-	  	<%= @video.president %>
+	 	  <%= @video.president %>
+	 	  <%= button_to '(WIKI)', 'http://'+@president.wiki %>
 		</p>
   	<br>
   	  	<br>
@@ -37,7 +38,7 @@
 	<% @comments.each do |comment| %>
 		  <p> </p>
 	  <p>
-	    <strong>comment:</strong>
+	    <strong><%= comment.created_at %></strong><br>
 	    <%= comment.content %>
 	  </p>
 	<% end %>
@@ -52,12 +53,13 @@
 	    <%= f.label :content %><br>
 	    <%= f.text_area :content %>
 	  </p>
-
 	  <p>
-	    <%= f.label :gender %><br>
-	    <%= f.text_field :gender %>
-	  </p>
-
+    	<%= f.label :gender %><br>
+    	<%= f.label :gender, "male", :value => "male"  %>
+    	<%= f.radio_button :gender, "male" %>
+    	<%= f.label :gender, "female", :value => "female" %>
+    	<%= f.radio_button :gender, "female", :checked => true %>
+    </p>
 	  <p>
 	    <%= f.label :age %><br>
 	    <%= f.text_field :age %>
