--- a/president/app/views/video/video_view2.html.erb
+++ b/president/app/views/video/video_view2.html.erb
@@ -28,6 +28,7 @@
       <br>
     <strong>Debate President:</strong>
       <%= @video1.president %>
+	 	  <%= button_to '(WIKI)', 'http://'+@president1.wiki %>
     </p>
   <br>
         <br>
@@ -35,7 +36,7 @@
    <h3> <strong>ALL COMMENTS</strong></h3>
         <% @comments1.each do |comment| %>
         <p>
-          <strong>Content:</strong>
+	        <strong><%= comment.created_at %></strong><br>
           <%= comment.content %>
         </p>
         <% end %>
@@ -49,8 +50,11 @@
           <%= f.text_area :content %>
         </p>
         <p>
-          <%= f.label :gender %><br>
-          <%= f.text_field :gender %>
+    	    <%= f.label :gender %><br>
+    	    <%= f.label :gender, "male", :value => "male"  %>
+    	    <%= f.radio_button :gender, "male" %>
+    	    <%= f.label :gender, "female", :value => "female" %>
+    	    <%= f.radio_button :gender, "female", :checked => true %>
         </p>
         <p>
           <%= f.label :age %><br>
@@ -101,13 +105,14 @@
         <br>
           <strong>Debate President:</strong>
           <%= @video2.president %>
+	 	      <%= button_to '(WIKI)', 'http://'+@president2.wiki %>
         </p>
   <br>
         <br>
   <h3> <strong>ALL COMMENTS</strong></h3>
         <% @comments2.each do |comment| %>
         <p>
-          <strong>Content:</strong>
+	        <strong><%= comment.created_at %></strong><br>
           <%= comment.content %>
         </p>
         <% end %>
@@ -121,8 +126,11 @@
           <%= f.text_area :content %>
         </p>
         <p>
-          <%= f.label :gender %><br>
-          <%= f.text_field :gender %>
+    	    <%= f.label :gender %><br>
+    	    <%= f.label :gender, "male", :value => "male"  %>
+    	    <%= f.radio_button :gender, "male" %>
+    	    <%= f.label :gender, "female", :value => "female" %>
+    	    <%= f.radio_button :gender, "female", :checked => true %>
         </p>
         <p>
           <%= f.label :age %><br>
