--- a/app/views/video/video_view.html.erb
+++ b/app/views/video/video_view.html.erb
@@ -15,7 +15,7 @@
 	
 
 	<div class="page-wrapper">
-	<div class="main supporting" id="zen-supporting" role="main" style="postion:relative;">
+	<div class="main supporting" id="zen-supporting" role="main">
 		<h3>
 		<strong>Debate Video Title:</strong>
 		<%= @video.title %>
@@ -52,7 +52,13 @@
 	<%= form_for :comment, url: comment_add_path(@video) do |f| %>
 	  <p> </p>
 
-	<div id="comment"  style="float:left;margin:0 0 0 5px;">
+	<div id="comment">
+	  <style>
+		  #comment{    
+				   float:left;
+				   margin:0 0 0 5px;   
+			  }
+	  </style>
 	  <p> 
 	    <%= f.label :content %><br>
 	    <%= f.text_area :content %>
@@ -65,27 +71,22 @@
     	    <%= f.radio_button :gender, "female", :checked => true %>
           </p>
 	  <p>
-	    <%= f.label :age %><br>
-	    <%= f.text_field :age %>
-	  </p>
-	  <p>
 	    <%= f.submit %>
 	  </p>
      	</div>
-	
-        <div class="Scores" id="Scores" style=" float:left;margin:0 0 0 5px; ">
-          <strong>Score</strong>
- 	  <div class="slideButton">
-            <div class="slider"></div>
-            <div class="pointer"></div>
-            <div class="panel"></div>
-	  </div>
-	  <script>
-	    (function(){
-		         it = new Rotation1();
-	               })()
-	  </script>
-	</div>
+        <div id="RotateButton">      
+ 	   <div class="slideButton">
+              <div class="slider"></div>
+              <div class="pointer"></div>
+              <div class="panel"></div>
+	   </div>
+	   <p>Score</p>
+	   <script>
+	      (function(){
+		           it = new Rotation1();
+	                 })()
+	   </script>
+ 	 </div>
 
 	<% end %>
 
