--- a/president/app/views/admin/home.html.erb
+++ b/president/app/views/admin/home.html.erb
@@ -1,7 +1,7 @@
 <html>
 <head>
    <meta name="Unknown Team" http-equiv="Content-Type" content="text/html; charset=gb2312" />
-   <%= stylesheet_link_tag "admin_home" %>
+   <%= stylesheet_link_tag "admin" %>
 </head>
 
 <body>
@@ -20,20 +20,40 @@
 				-->
 				<h3 class="page-header">Presidents</h3>
 				
-				<p class="btn"><%=link_to 'Add', admin_president_new_path%></p>
-				<p class="btn"><%= link_to 'List', admin_president_list_path%></p>
-  	
+				
+				<%=link_to admin_president_new_path, class:"btn btn-primary" do%>
+					<i class="glyphicon glyphicon-plus">Add</i>
+				<%end%>
+								
+				
+				<%=link_to admin_president_list_path, class:"btn btn-primary" do%>
+  					<i class="glyphicon glyphicon-th-list">List</i>
+  				<% end %>
             </div>    
         </div>
         <div class="col-md-6">
         	<div class="thumbnail">
             	<h3 class="page-header">Videos</h3>
 				
-				<p class="btn "><%= link_to 'Add', admin_video_new_path%></p>
-				<p class="btn"><%= link_to 'List', admin_video_list_path%></p>
-
+				
+				<%=link_to admin_video_new_path, class:"btn btn-primary" do%>
+					<i class="glyphicon glyphicon-plus">Add</i>
+				<%end%>
+								
+				
+				<%=link_to admin_video_list_path, class:"btn btn-primary" do%>
+  					<i class="glyphicon glyphicon-th-list">List</i>
+  				<% end %>
+				
             </div>
         </div>
+				
+				<%= link_to admin_logout_path, class:"btn btn-primary" do%>
+					<i class="glyphicon glyphicon-circle-arrow-left"> Logout</i>
+				<%end%>
+
+					
+
         <!--
         <div class="col-md-4">
             <div class="thumbnail">
