--- a/president/app/views/admin/president_new.html.erb
+++ b/president/app/views/admin/president_new.html.erb
@@ -1,22 +1,45 @@
-<h1>Add President</h1>
-<%= form_for :president, url: admin_president_add_path do |f| %>
-  <p>
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </p>
+<html>
+
+<head>
+   <meta name="Unknown Team" http-equiv="Content-Type" content="text/html; charset=gb2312" />
+   <%= stylesheet_link_tag "admin" %>
+</head>
+
+
+<body class="container">
+
+	<h1 class="jumbotron">Add President</h1>
 	
-  <p>
-    <%= f.label :party %><br>
-    <%= f.select(:party, [["Republican", "Republican"], ["Democratic", "Democratic"]] ) %>
-  </p>
+	<%= form_for :president, url: admin_president_add_path do |f| %>
+ 	
+ 	<p>
+    	<%= f.label :name %><br>
+    	<%= f.text_field :name %>
+  	</p>
+	
+	<div class="btn-group">
+  		<%= f.label :party %> <br>
+	
+  		<%= f.select(:party, [["Republican", "Republican"], ["Democratic", "Democratic"]], {}, {class: "form-control"}) %>
+	</div>
+
  
-  <p>
-    <%= f.label :wiki %><br>
-    <%= f.text_area :wiki %>
-  </p>
+  	<p>
+    	<%= f.label :wiki %><br>
+    	<%= f.text_area :wiki, :cols=>"100",:rows=>"10" %>
+  	</p>
  
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
-<td><%= link_to 'Back', admin_home_path%></td>
+  	<p>
+  	 	<%= f.submit %>
+  	</p>
+	<% end %>
+	
+	<%= link_to admin_home_path, class:"btn btn-primary" do %>
+		<i class="glyphicon glyphicon-circle-arrow-left">Back</i>
+	<%end%>
+
+
+ 
+ 
+</body>
+</html>
