--- a/president/app/views/admin/president_view.html.erb
+++ b/president/app/views/admin/president_view.html.erb
@@ -1,17 +1,34 @@
-<h1>President</h1>
+<html>
+<head>
+   <meta name="Unknown Team" http-equiv="Content-Type" content="text/html; charset=gb2312" />
+   <%= stylesheet_link_tag "admin" %>
+</head>
 
-<p>
-  <strong>Name:</strong>
-  <%= @president.name %>
-</p>
+
+
+<body class="container">
+
+	<h1 class="jumbotron">President</h2>
+
+	<p>
+  		<strong>Name:</strong>
+  		<%= @president.name %>
+	</p>
  
-<p>
-  <strong>Party:</strong>
-  <%= @president.party %>
-</p>
+	<p>
+  		<strong>Party:</strong>
+  		<%= @president.party %>
+	</p>
 
-<p>
-  <strong>Wiki:</strong>
-  <%= @president.wiki %>
-</p>
-<td><%= link_to 'Back', admin_president_list_path%></td>
+	<p>
+  		<strong>Wiki:</strong>
+  		<%= @president.wiki %>
+	</p>
+	
+	<%= link_to admin_president_list_path, class:"btn btn-primary" do %>
+		<i class="glyphicon glyphicon-circle-arrow-left">Back</i>
+	<%end%>
+
+
+</body>
+</html>
