--- a/president/app/views/welcome/index.html.erb
+++ b/president/app/views/welcome/index.html.erb
@@ -1,21 +1,65 @@
-
 <html>
+
 <head>
    <meta name="Unknown Team" http-equiv="Content-Type" content="text/html; charset=gb2312" />
-   
-
 	<%= stylesheet_link_tag "welcome" %>
 </head>
 
-<label>Topics</label>
-<%= select_tag :topic, options_for_select(@topics.collect{|c| [c.topic, c.topic]}), prompt: "Select a topic", :onchange => "get_options(this.value)" %>
 
-<label>President1</label>
-<%= select_tag :president1, "<option value=\"-1\">Please select topic</option>".html_safe%>
-<label>President2</label>
-<%= select_tag :president2, "<option value=\"-1\">Please select topic</option>".html_safe%>
+<body>
 
-<input type="button" value="View" onclick="window.location.href= '/video_view/'+ document.getElementById('president1').options[document.getElementById('president1').selectedIndex].value + '/' + document.getElementById('president2').options[document.getElementById('president2').selectedIndex].value">
+<nav class="navbar navbar-default">
+	<div class="container-fluid">
+		<div class="navbar-header">
+      		<a class="navbar-brand">The Debate of Presidents</a>
+    	</div>
+    	
+		<ul class="nav navbar-nav">
+        	<li class="active"><a >Topics</a></li>        		
+        	<li>
+        		<%= select_tag :topic, options_for_select(@topics.collect{|c| [c.topic, c.topic]}), prompt: "Select a topic", :onchange => "get_options(this.value)" , :class=>"form-control", :style=>"height:50px;"%>
+        	</li>
+        	
+        	<li class="active"><a>President 1</a></li>        		
+        	<li>
+        		<%= select_tag :president1, "<option value=\"-1\">Please select topic</option>".html_safe, :class=>"form-control", :style=>"height:50px;"%>
+			</li>
+			
+			<li class="active"><a>President 2</a></li>
+			<li>
+				<%= select_tag :president2, "<option value=\"-1\">Please select topic</option>".html_safe, :class=>"form-control", :style=>"height:50px;"%>
+			</li>
+        	
+			</ul>
+		<ul class="nav navbar-nav navbar-right">
+		
+				<script type="text/javascript">
+        function checkroute() {
+        	var video1 = document.getElementById('president1').options
+[document.getElementById('president1').selectedIndex].value;
+        	var video2 = document.getElementById('president2').options
+[document.getElementById('president2').selectedIndex].value;
+        	var path;
+					if (video1 == video2 && video1 > 0) {
+        		path = '/video_view/'+video1;
+        		window.location.href = path;
+        	}
+        	else if (video1 > 0 && video2 > 0){
+        		path =  '/video_view/'+video1+'/'+video2;
+        		window.location.href = path;
+          }
+          else {
+        		alert("Please choose topic and president");
+        	}
+        }
+    </script>
+    <input type="button" value="View" onclick="checkroute();">
+      	
+		</ul>
+		
+		</div>
+</nav>
+
 
 <script type="text/javascript">
   function get_options(value){
@@ -31,12 +75,7 @@
   }
 </script>
 
-
-<div class ='jumbotron'>
-
-  	
-
-    
+<!-- -->
 
 
 
@@ -46,77 +85,84 @@
 			
 	</div>
 
-	<div class="preamble" id="zen-preamble" role="article">
-		<h3>The Debate of Presidents</h3>
-		<p>During presidential elections in the United States, it has become customary for the main candidates to engage in a debate. The topics discussed in the debate are often the most controversial issues of the time, and arguably elections have been nearly decided by these debates. Candidate debates are not constitutionally mandated, but it is now considered a de facto election process. The debates are targeted mainly at undecided voters; those who tend not to be partial to any political ideology or party.</p>		
-	</div>
+	
 	
 	<div class="main supporting" id="zen-supporting" role="main">
 		<div class="explanation" id="zen-explanation" role="article">
-			<h3>Republican or Democratic?</h3>
-			<iframe frameborder='0' width='460' height='390' scrollable='no' src='http://www.c-span.org/video/standalone/?308511-1/2012-presidential-candidates-debate'></iframe>
+			
+		<h3>Recommend Videos</h3>	
+		<% @comments.each do |v| %>
+		<%= link_to image_tag('@videos.find(v[0]).pic', size: "400x300"), video_path(@videos.find(v[0])) %> <br>
+				</div>
+			<% end %>
+			
+			
+			
+			
 			<h3>Which Topic do You Like?</h3>
-		
-			<div class="images">
-				<img src="agriculture.jpg">
-				<img src="economy.jpg">
-				<img src="industry.jpg">
-				<img src="military.jpg">
-				<select>
-  					<option value="volvo">Volvo</option>
-  					<option value="saab">Saab</option>
-  					<option value="mercedes">Mercedes</option>
-  					<option value="audi">Audi</option>
-				</select>	
+			<div class="styled-select">
+			 <select style='cursor: pointer'>
+			 <option> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;*********** Please Select One Topic You Like ***********</option>
+			 <option>Topic 1</option>
+			 <option>Topic 2</option>
+			 </select>
 			</div>
+				
+			
 			
 			<h3>Which President do You Like?</h3>
-			<div class = "president">
-				<img src="pre1.jpg">
-				<select>
-  					<option value="volvo">Volvo</option>
-  					<option value="saab">Saab</option>
-  					<option value="mercedes">Mercedes</option>
-  					<option value="audi">Audi</option>
-				</select>
-				<img src="pre2.jpg">
-				<select>
-  					<option value="volvo">Volvo</option>
-  					<option value="saab">Saab</option>
-  					<option value="mercedes">Mercedes</option>
-  					<option value="audi">Audi</option>
-				</select>
+				
+			<div class="styled-select">
+			 <select style='cursor: pointer'>
+			 <option> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;*********** Please Select One President You Like ***********</option>
+			 <option>President 1</option>
+			 <option>President 2</option>
+			 </select>
 			</div>
 			
-			<h3>Recommend Videos</h3>	
-			<% @videos.each do |video| %>
-				<%= button_to video.pic, video_path(video) %>
-			<% end %>
 			
-			<h3>Admin Login</h3>
-			<%= form_for :login, url: admin_login_path do |f|%>
-  			<p>
-    			<label>Username</label><br>
-    			<%= f.text_field :username %><label><%= @usrerr %></label>
-  			</p>
- 
- 			<p>
-    			<label>Password</label><br>
-    			<%= f.text_field :password %><label><%= @pswerr %></label>
-  			</p>
- 
-  			<p>
-   				 <%= f.submit %>
-  			</p>
-			<% end %>
-
+			
+			<h3>Republican or Democratic?</h3>
+			<div id="banner">
+				<div><a href='http://www.svgop.com/files/Differences%20Between%20Republicans%20and%20Democrats.pdf' target=_blank> <img src="https://www.multistate.com/insider/wp-content/uploads/2012/11/republican-democrat-battle.jpg" alt="Skyline 1" height='270' width='460'/> </a></div>
+				<div><a href='http://www.svgop.com/files/Differences%20Between%20Republicans%20and%20Democrats.pdf' target=_blank>  <img src="http://1.bp.blogspot.com/-WuxMlJySQ4w/TfqfME7-7WI/AAAAAAAACag/YUQcrbNtbpI/s1600/morin.jpg" alt="Skyline 3" height='270' width='450'> </a></div>
+				
+			</div>
+			
 		</div>
 	</div>
 
+</div>
+
+
+	
+	
+	
+	
+<div class="login jumbotron">
+	<p class="loginColor">Admin Login</p>
+	
+	<%= form_for :login, url: admin_login_path do |f|%>
+  	<p>
+    	<label class="loginColor">Username <%= @usrerr %></label>
+			<br>
+			<%= f.text_field :username %>
+  	</p>
+    
+ 	  <p>
+    	<label class="loginColor">Password <%= @pswerr %></label>
+			<br>
+    	<%= f.password_field :password %>
+  	</p>
+ 
+  	<p>
+   		<%= f.submit "Login", :class=>"btn btn-default" %>
+  	</p>
+	<% end %>
 
 
 </div>
-</div>
+
 
 </body>
 
