--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -100,7 +100,7 @@
 			<br>
 
 
-			<input class="viewButton2" type="button" value="View Videos" onclick="checkroute()"/>	<br><br>
+			<input class="viewButton2" type="button" value="View Videos" id = "view button" onclick="checkroute()"/>	<br><br>
 			
 			
 			<script type="text/javascript">
