--- a/app/views/admin/president_new.html.erb
+++ b/app/views/admin/president_new.html.erb
@@ -20,7 +20,7 @@
 	<div class="btn-group">
   		<%= f.label :party %> <br>
 	
-  		<%= f.select(:party, [["Republican", "Republican"], ["Democratic", "Democratic"]], {}, {class: "form-control"}) %>
+  		<%= f.select(:party, [["Republican", "Republican"], ["Democratic", "Democratic"],["Others","Others"]], {}, {class: "form-control"}) %>
 	</div>
 
  
