--- a/app/assets/stylesheets/video.css
+++ b/app/assets/stylesheets/video.css
@@ -156,7 +156,7 @@ ody {
 }
 @media screen and (max-width: 420px) { body { margin-left: 0 } }
 
-.Scores{
+.idContainer1{
 max-width:100%;
 max-height:100%;
     position: relative;
@@ -216,10 +216,10 @@ background-repeat:no-repeat;
 */
 
 body, .page-wrapper:before, .page-wrapper:after {
-    background: #3c1d08 url('whitehouse1.jpg') no-repeat fixed top;
+    background: #3c1d08 url('whitehouse.jpg') no-repeat fixed top;
 }
-.page-wrapper, .intro:after, .supporting footer {
-    background: #fceec6 url('whitehouse_light.jpeg') no-repeat fixed top;
+.page-wrapper, .intro:after, .supporting div, .supporting footer {
+    background: #fceec6 url('whitehouse.jpeg') no-repeat fixed top;
 }
 
 
@@ -649,6 +649,9 @@ screen and (device-width: 768px), screen and (device-width: 1024px) {
 }
 .requirements h3:after {
     content: ' had crept in';
+}
+.supporting div {
+    padding: 0 0 3em;
 }
 
 .supporting p {
@@ -1191,62 +1194,6 @@ div[class^=design] a, div[class^=zen] a {
     .sidebar .zen-resources h3 {              width: 314px }
     .sidebar .wrapper .zen-resources ul {     max-width: 352px }
     .sidebar .wrapper .zen-resources:after {  width: 352px !important }
-}
-
-/* Roate Button*/
-
-.slideButton{  
-  background-color: hsla(190, 90%, 0%, 1);
-  background-image:url(http://i.imgur.com/FTt4CCI.png);
-  width:101px;
-  height:101px;
-  position:relative;
-  border-radius:56px;
-  overflow:hidden;
-  cursor:pointer;
-  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.2);
-}
-.slider{
-  position:absolute;
-  background:url(http://i.imgur.com/tQCNIgo.png);
-  width:101px;
-  height:101px;
-          transition: 0s;
-  -webkit-transition: 0s;
-}
-.pointer{
-  background:url(http://i.imgur.com/SLzrzp6.png);
-  width:101px;
-  height:101px;
-  position:absolute;
-  border-radius:50px;
-          transition: 1.2s;
-  -webkit-transition: 1.2s;
-}
-.panel{
-  font-family:Arial, Helvetica, sans-serif;
-  font-size:9px;
-  text-align:center;
-  width:26px;
-  height:26px;
-  top:36px;
-  left:36px;
-  border-radius:30px;
-  position:absolute;
-  line-height:28px;
-  color:#39a;
-  background:#444;
-  box-shadow:inset 0 1px 6px rgba(0,0,0,0.8);
-  border:1px solid #aaa;
-            transition: 1.2s;
-  -webkit-transition: 1.2s;
-}
-.slideButton:hover > .panel{
-  color:#6ef;  
-  transition: 0.2s;
-  background:#445;
-  box-shadow:inset 0 1px 6px rgba(0,0,0,0.4);
-  text-shadow: 0 0 5px #fff;
 }
 
 /* -fin- */
