--- a/app/assets/stylesheets/welcome.css
+++ b/app/assets/stylesheets/welcome.css
@@ -6,26 +6,69 @@ nav li{
 	display:inline;
 }
 
-.login {
-	position:fixed;
-  top:100px;
-  right:100px;
+.container{
+	margin-top:10px;
+	margin-bottom:10px;
+
+}
+
+
+.recommanded {
+	position:absolute;
+  right:80px;
 	width:400px;
-	height:330px;
-	padding:50px;
-	filter:alpha(Opacity=80);
-	-moz-opacity:0.8;
-	opacity:0.8; 	
-}
-
-.loginColor {
-	color:#7C2020;
-}
-
-image {
-	width:200px;
 	
+	padding:30px;
+	background-color:#111;	
+}
 
+
+
+.recommanded h3{
+	background-color:#7C2020;
+	font-size:20px;
+	color:#fff;
+
+}
+
+.viewButton{
+	font-family:Apple Chancery;
+	font-size:25px;
+	color:black;
+	height:40px;
+	width:200px;
+	background-color:Transparent;
+	background-repeat:no-repeat;
+	border:2;
+	cursor:pointer;
+	overflow:hidden;
+}
+
+.viewButton2{
+		-moz-box-shadow: 0px 0px 0px 2px #9fb4f2;
+		-webkit-box-shadow: 0px 0px 0px 2px #9fb4f2;
+		box-shadow: 0px 0px 0px 2px #9fb4f2;
+		background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #7892c2), color-stop(1, #476e9e));
+		background:-moz-linear-gradient(top, #7892c2 5%, #476e9e 100%);
+		background:-webkit-linear-gradient(top, #7892c2 5%, #476e9e 100%);
+		background:-o-linear-gradient(top, #7892c2 5%, #476e9e 100%);
+		background:-ms-linear-gradient(top, #7892c2 5%, #476e9e 100%);
+		background:linear-gradient(to bottom, #7892c2 5%, #476e9e 100%);
+		filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#7892c2', endColorstr='#476e9e',GradientType=0);
+		background-color:#7892c2;
+		-moz-border-radius:10px;
+		-webkit-border-radius:10px;
+		border-radius:10px;
+		border:1px solid #4e6096;
+		display:inline-block;
+		cursor:pointer;
+		color:#ffffff;
+		font-family:arial;
+		font-size:19px;
+		padding:12px 37px;
+		margin-left:120px;
+		text-decoration:none;
+		text-shadow:0px 1px 0px #283966;
 }
 
 
@@ -180,10 +223,12 @@ body {
 }
 
 body, .page-wrapper:before, .page-wrapper:after {
-    background: #3c1d08 url('whitehouse1.jpg') no-repeat fixed 50% top;
+    background: #3c1d08 url('whitehouse.jpg') no-repeat fixed 50% top;
+		background-size:cover;
 }
 .page-wrapper, .intro:after, .supporting div, .supporting footer {
-    background: #fceec6 url('whitehouse_light.jpeg') no-repeat fixed 50% top;
+    background: #fceec6 url('whitehouse.jpeg') no-repeat fixed 50% top;
+		background-size:cover;
 }
 /*  Somewhat torn about these bg images.
     
@@ -1233,24 +1278,24 @@ div[class^=design] a, div[class^=zen] a {
 
 .styled-select {
     width: 460px;
-    height: 45px;
+    height: 50px;
     overflow: hidden;
-    background: url("http://images.cnblogs.com/cnblogs_com/shishm/201203/20120302110411201.jpg") no-repeat right #ddd;
 }
 
 .styled-select select {   
     background: transparent; 
-		font-family: Apple Chancery;
-		text-align: center;  
-		color: black;
+		font-family: Arial;
+		background-image:url("flag2.png");
+		text-align: center; 
+		cursor:pointer; 
+		color: white;
     width: 460px;   
     padding: 4px;   
-    font-size: 16px;   
-    border: 5px dashed #7C2020;   
-    height: 45px;   
+    font-size: 20px;   
+    border:none;   
+    height: 50px;   
     -webkit-appearance: none; 
 }
-
 
 /* Wrapper*/
 
@@ -1289,3 +1334,4 @@ body { color: #fd4903 }
 		-webkit-mask-position: -1200px -1200px;
 	}
 }
+
