--- a/app/views/video/video_view.html.erb
+++ b/app/views/video/video_view.html.erb
@@ -5,9 +5,8 @@
 	   <script src="CJL.0.1.min.js"></script>
 	   <script src="rotate.js"></script>
 	   <%= stylesheet_link_tag "video" %>
-	   <h2>The Beauty <abbr title="Cascading Style Sheets"></abbr> &nbsp;&nbsp;&nbsp;&nbsp;Debate</h2>
-	   <!--<%= button_to 'back', welcome_path %>-->
-	   	   	   <a href="#" class="myButton" onclick="window.location.href= '/'">Welcome</a>
+	   <h2> &nbsp;&nbsp;The Mashup <abbr title="Cascading Style Sheets"></abbr> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Debate</h2>
+	   	   	   <a href="#" class="myButton" onclick="window.location.href= '/'">Back</a>
 	</head>
 
 	<body background="">
@@ -23,7 +22,6 @@
 		<p>
 	  		<%= @video.embed.html_safe %>
 		</p>
-		<div style = "float:left">
 		<p>
 	 	 <strong>Debate Topic:</strong>
 	  	<%= @video.topic %>
@@ -31,47 +29,20 @@
 	  	<br>
 	 	<strong>Debate President:</strong>
 	 	  <%= @video.president %>
-
-    </p>
-
-		</div>
-
-		<div style = "float: left;">
-		<p> <strong>Score</strong></p>
-		  <br>
+	 	  <%= link_to image_tag('wiki.png', size: "20x20"), 'http://'+@president.wiki %>
+		</p>
   	<br>
-		</div>
+  	  	<br>
 
-		<div style = "float: left;">
-
-		        <div id="RotateButton">      
- 	   <div class="slideButton">
-              <div class="slider"></div>
-              <div class="pointer"></div>
-              <div class="panel"></div>
-	   </div>
-	
-	   <script>
-	      (function(){
-		           it = new Rotation1();
-	                 })()
-	   </script>
- 	 </div>
- 	 </div>
-<br>
-	  	<br>
-	  	<br>
-	  	<br>
-      <br>
-  	<br>
 	<h3>
 	<strong>Leave Your Comment Below:</strong>
 	</h3>
 	  <p> </p>
+      <div style="float:left">
 	<%= form_for :comment, url: comment_add_path(@video) do |f| %>
 	  <p> </p>
 	  <p>
-	    <%= f.label :content %><br>
+	    <%= f.label :comment %><br>
 	    <%= f.text_area :content %>
 	  </p>
 	  <p>
@@ -84,20 +55,42 @@
 	  <p>
 		<%= f.select(:age, [["under 20 years old", "10"], ["20-30 years old", "20"], ["30-40 years old", "30"], ["40-50 years old", "40"], ["50-60 years old", "50"],  ["over 60 years old", "60"]] ) %>
 	  </p>
-
-  	<p>
-	    <%= f.submit %>
+  	  <p>
+	  <%= f.submit %>	  
+	  </p>  
+	 </div>
+         <div style="float:left; left:500px;">
+	  <div style="visibility:hidden;">  <%= f.text_field :score %></div>
+	  <p id="score">
+	  <%= f.label :score %>
 	  </p>
 
-	<% end %>
+	  <div id="idContainer1"> 
+           <style>
+            #idContainer1{border:0px solid #000;width:128px; height:118px; background: center no-repeat;  border-radius:56px;
+  overflow:hidden; cursor:pointer;}
+          </style>
+	  <script>
+	    (function(){
+	                 var container = $$("idContainer1"), src = "http://imageshack.com/a/img538/6042/ERrlXE.png"
+		         it = new ImageTrans1(container,"score");
+	                 it.load(src);
+	               })()
+	  </script>
 
-<div class = "comments">
+	</div>
+	<p>Score Range: 1-100</p>
+	<% end %>
+	</div>
+
+<div class = "comments" style="clear: both;">
 	<h3> <strong>ALL COMMENTS</strong></h3>
 	<% @comments.each do |comment| %>
 		  <p> </p>
 	  <p>
 	    <strong><%= comment.created_at %></strong><br>
 	    <%= comment.content %>
+	    [score: <%= comment.score %>]
 	  </p>
 	<% end %>
 </div>
